# neuroquery

./: .appveyor.yml  .codecov.yml  .gitignore  .travis.yml  LICENSE  README.md  azure-pipelines.yml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini  whatsnew
.github/workflows/: testing.yml
binder/: requirements.txt
examples/: coordinates_to_brain_maps.py  demo_ensemble_model.ipynb  kda_example.py  make_notebooks.sh  minimal_example.ipynb  minimal_example.py  mkda_example.ipynb  mkda_example.py  plot_using_trained_model.ipynb  plot_using_trained_model.py  reverse_search_from_brain_maps_to_terms.ipynb  run_notebooks.sh  standard_meta_analysis_example.py  training_neuroquery.ipynb  training_neuroquery.py
examples/examples_src/: coordinates_to_brain_maps.py  demo_ensemble_model.py  make_notebooks.sh  minimal_example.py  plot_using_trained_model.py  reverse_search_from_brain_maps_to_terms.py  training_neuroquery.py
neuroquery/: __init__.py  _img_utils.py  _utils.py  data_utils.py  datasets.py  encoding.py  img_utils.py  meta_analysis.py  nmf.py  ridge.py  smoothed_regression.py  text_to_brain.py  tokenization.py
neuroquery/data/: highlight.xsl  nltk_stop_words.txt
neuroquery/tests/: test_data_utils.py  test_datasets.py  test_encoding.py  test_img_utils.py  test_meta_analysis.py  test_nmf.py  test_ridge.py  test_smoothed_regression.py  test_text_to_brain.py  test_tokenization.py  test_utils.py
src/neuroquery/: _compat.py  (+4 more)
tests/: test_datasets.py  test_encoding.py  test_nmf.py  test_ridge.py  test_smoothed_regression.py  test_tokenization.py
(+2 files in other folders)
