[metadata]
name = neuroquery
description = Meta-analysis of neuroimaging studies.
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords = neuroimaging, meta-analysis
url = https://github.com/neuroquery/neuroquery
author = Jérôme Dockès
author_email = jerome@dockes.org
maintainer = Jérôme Dockès
maintainer_email = jerome@dockes.org
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
packages = find:
package_dir =
    =src
install_requires =
    lxml
    nilearn>=0.6.0
    numpy>=1.16
    pandas>=0.24
    regex
    requests
    scikit-learn>=0.21
    scipy
python_requires = >=3.7

[options.extras_require]
dev =
    nltk>=3.4.5
    coverage
    pytest
    pytest-cov
    tox
stemming =
    nltk>=3.4.5

[options.packages.find]
where = src